@@ -1,0 +1,4 @@
+/*
+Package logstash is a Metricbeat module that contains MetricSets.
+*/
+package logstash
